--- a/public/style.css
+++ b/public/style.css
@@ -592,3 +592,11 @@ body.dark-mode #use-cases-panel::-webkit-scrollbar-thumb {
 #param-search:focus {
   border-color: #0af;
 }
+
+.form-group { margin-bottom: 1.2rem; margin-top:20px;}
+label {
+  display:block;
+  font-weight:600;
+  margin-bottom:0.4rem;
+  color: #ddd;
+}
